--- a/zybo/readme
+++ b/zybo/readme
@@ -1,18 +1,10 @@
-ZYBOボードを用いたあれです。FPGAをLinux上で操作するやつです。
+ZYBOボードを用いてCPUとFPGAが通信するシステムを作成します。Linux上でFPGAを操作できるようします。
 
 ・LED4_AXI_SLAVE ディレクトリ
-チュートリアル的な奴です。このシステムの機能はLEDが光るぐらいです。ほとんど以下の資料に従いました。
-https://www.slideshare.net/marsee101/vivado-and-zybolinux2
-環境を整えるのが一番時間がかかり、そこをやってしまうとすんなりいきました。環境のOSは資料に合わせたほうが良いと思います。
-おおよそのな流れは次の通りです。具体的な流れは上記資料にあります。
-1.回路を作る
-2.GithubからLinuxファイルを落とし、ZYBO用に編集 -> ZYBO上で動くLinuxができる。
-3.Cのプログラムを書き実行
-2をうまいことやってしまえば、Linux上のプログラムからmemoryを書き換える要領で、FPGA回路内のレジスタの書き換えができるようになります。
+LEDの点滅の挙動をLinuxから操作するシステムです。
 
 ・Polling_ADD ディレクトリ
-ポーリング（あるいはロック）を用いてFPGA上の加算器の結果をCPUに受け取ることを目的としたプロジェクトです。
-CreateIP->GenerateBitsteream->ExportHW->Generate Boot.bin-> Now
+Linuxから2つの引数をFPGAに与えるとそれらの和を計算して返すというシステムです。FPGAからCPUへの結果の送信はポーリング（スピンロック）を用います。
 
 次のやること
 それに、まだ一方的な関係です。Slaveの名の通り常に受身の状態で動作し、自分の方からデータを読み書きすることはできません。CPUから指示をされるがままです。
