--- a/zybo/readme
+++ b/zybo/readme
@@ -4,7 +4,7 @@ ZYBOボードを用いてCPUとFPGAが通信するシステムを作成します
 LEDの点滅の挙動をLinuxから操作するシステムです。
 
 ・Polling_ADD ディレクトリ
-Linuxから2つの引数をFPGAに与えるとそれらの和を計算して返すというシステムです。FPGAからCPUへの結果の送信はポーリング（スピンロック）を用います。
+CPUから2つの引数をFPGAに与えるとFPGAがそれらの和を計算してCPUに返すというシステムです。FPGAからCPUへの結果の送信はポーリング（スピンロック）を用います。
 
 次のやること
 それに、まだ一方的な関係です。Slaveの名の通り常に受身の状態で動作し、自分の方からデータを読み書きすることはできません。CPUから指示をされるがままです。
