--- a/zybo/readme
+++ b/zybo/readme
@@ -7,5 +7,4 @@ LEDの点滅の挙動をLinuxから操作するシステムです。
 CPUから2つの引数をFPGAに与えるとFPGAがそれらの和を計算してCPUに返すというシステムです。FPGAからCPUへの結果の送信はポーリング（スピンロック）を用います。
 
 次のやること
-それに、まだ一方的な関係です。Slaveの名の通り常に受身の状態で動作し、自分の方からデータを読み書きすることはできません。CPUから指示をされるがままです。
-次は双方向のやり取りができるような何かを作ろうとしています。具体的にはプッシュボタンを押されたことをCPUに伝えるようなシステムを作りたいです。
+FPGA側のプッシュボタンが押されたことを割り込みでCPUに伝えるようなシステムの作成。
